style.css
/* Color Palette
#003236 - dark dark teal
#006F7A - dark teal
#03A6A6 - teal
#491A1B - dark red
#CC3035 - red
#E66A6D - pink
#D89288 - light pink
#E2DCD1 - dark white <-- #d1d7e2 is complementary
#F2EDE6 - bright white
*/



/* Amazonas
Comfortaa
Fabiolo
Kaorigel
OlivessansPimiento
Steel City Comic */





/*   ##########    ##########   ##           ##########   ##########     ##########
    ##            ##        ##  ##          ##        ##  ##       ##   ##
    ##            ##        ##  ##          ##        ##  ##        ##  ##
    ##            ##        ##  ##          ##        ##  ##       ##    ##########
    ##            ##        ##  ##          ##        ##  ##########              ##
    ##            ##        ##  ##          ##        ##  ##      ##              ##
    ##            ##        ##  ##          ##        ##  ##       ##             ##
     ##########    ##########   ##########   ##########   ##        ##   ##########   */

body {
  background-color: #F2EDE6;
  width:100%;
  font-family:'Amazonas';
}

/* Background colors (from palette) */
.bg-darkteal {
  background-color: #006F7A;
}

.bg-teal {
  background-color: #03a6a6;
}

.bg-red {
  background-color: #CC3035;
}

.bg-pink {
  background-color: #E66A6D;
}

.bg-lightpink {
  background-color: #D89288;
}

.bg-darkwhite {
  background-color: #E2DCD1;
}

.bg-brightwhite {
  background-color: #F2EDE6;
}

/* Text colors (from palette) */
.text-darkdarkteal {
  color: #003236;
}

.text-darkteal {
  color: #006F7A;
}

.text-teal {
  color: #03a6a6;
}

.text-darkred {
  color: #491A1B
}

.text-red {
  color: #CC3035;
}

.text-pink {
  color: #E66A6D;
}

.text-lightpink {
  color: #D89288;
}

.text-darkwhite {
  color: #E2DCD1;
}

.text-brightwhite {
  color: #F2EDE6; 
}

/* Button colors (from palette) */
.btn-darkteal {
  background-color: #006F7A;
  color: #F2EDE6;
  font-weight: 500;
}
.btn-darkteal:hover{
  color:#03a6a6;
}

.btn-teal {
  background-color: #03a6a6;
  color: #F2EDE6;
  font-weight: 500;
}
.btn-teal:hover{
  color:#006F7A;
}

.btn-red {
  background-color: #CC3035;
  color: #F2EDE6;
  font-weight: 500;
}
.btn-red:hover {
  color:#491A1B;
}

.btn-pink {
  background-color: #E66A6D;
  color: #F2EDE6;
  font-weight: 500;
}
.btn-pink:hover {
  color:#491A1B;
}

.btn-lightpink {
  background-color: #D89288;
  color: #F2EDE6;
  font-weight: 500;
}
.btn-lightpink:hover {
  color:#CC3035;
}

.btn-darkwhite {
  background-color: #E2DCD1;
  color: #CC3035;
  font-weight: 500;
}
.btn-darkwhite:hover {
  color:#491A1B;
}

.btn-brightwhite {
  background-color: #F2EDE6;
  color: #CC3035;
  font-weight: 500;
}
.btn-brightwhite:hover {
  color:#491A1B;
}

/* soft black and grey text colors */
.soft-blk {
  color: #0e1111;
}

.dk-grey {
  color: #232b2b;
}

.warm-grey {
  color: #353839;
}

.blue-grey {
  color: #3b444b;
}

.cool-grey {
  color: #414a4c;
}




/*  ############  ####      ####    ########     ##########   ##########   ##########
         ##       ## ##    ## ##   ##      ##   ##        ##  ##          ##
         ##       ##  ##  ##  ##  ##        ##  ##            ##          ##
         ##       ##   ####   ##  ##        ##  ##            ##           ##########
         ##       ##    ##    ##  ############  ##   ######   ########              ##
         ##       ##          ##  ##        ##  ##        ##  ##                    ##
         ##       ##          ##  ##        ##  ##        ##  ##                    ##
    ############  ##          ##  ##        ##   ##########   ##########   ##########   */

/* Images in tutorials/the knitting tutorial */
.guide-img {
  max-width: 100%;
  height: auto;
  padding:.3em;
  border-radius:.45rem;
}

/* Carousel images */
.carousel-img {
  height: auto;
  width: 100%;
}




/*   ##########   ##########  ###       ##  ##########  ##########      ########    ##
    ##        ##  ##          ## ##     ##  ##          ##       ##    ##      ##   ##
    ##            ##          ##  ##    ##  ##          ##        ##  ##        ##  ##
    ##            #########   ##   ##   ##  #########   ##       ##   ##        ##  ##
    ##   ######   ##          ##    ##  ##  ##          ##########    ############  ##
    ##        ##  ##          ##     ## ##  ##          ##      ##    ##        ##  ##
    ##        ##  ##          ##      ####  ##          ##       ##   ##        ##  ##
     ##########   ##########  ##       ###  ##########  ##        ##  ##        ##  ##########   */


/* Make first line bold */
.first-line {
  font-weight: bold;
}

/* Make text bold and underlined */
.bold-u {
  font-weight:bold;
  text-decoration:underline;
}

/* Add indent-like padding to the right*/
.indent-right {
  padding-right:.75rem;
}

/* Add padding to top */
.padding-top {
  padding-top:.5rem;
}




/*  ###       ##    ########    ##        ##  ##########      ########    ##########
    ## ##     ##   ##      ##   ##        ##  ##       ##    ##      ##   ##       ##
    ##  ##    ##  ##        ##  ##        ##  ##       ##   ##        ##  ##        ##
    ##   ##   ##  ##        ##  ##        ##  ##########    ##        ##  ##       ##
    ##    ##  ##  ############   ##      ##   ##       ##   ############  ##########
    ##     ## ##  ##        ##    ##    ##    ##        ##  ##        ##  ##      ##
    ##      ####  ##        ##     ##  ##     ##       ##   ##        ##  ##       ##
    ##       ###  ##        ##      ####      ##########    ##        ##  ##        ##  */

/* Logo */
.navbar-img {
  height:3.5rem;
  width:auto;
  padding-left:1.5rem;
}





/*  ###########   ##########    ##########   ############  ##########  ##########
    ##           ##        ##  ##        ##       ##       ##          ##       ##
    ##           ##        ##  ##        ##       ##       ##          ##        ##
    #########    ##        ##  ##        ##       ##       #########   ##       ##
    ##           ##        ##  ##        ##       ##       ##          ##########
    ##           ##        ##  ##        ##       ##       ##          ##      ##
    ##           ##        ##  ##        ##       ##       ##          ##       ##
    ##            ##########    ##########        ##       ##########  ##        ##   */

/* Footer texts */
.ftr-text {
  padding-top: .5em;
  padding-bottom: 0em;
}

.ftr-copy {
  text-align: center;
  color: #d1d7e2;
  padding-top: 1.3rem;
  opacity:75%;
}

/* Icons */
.fa-facebook-f,
.fa-envelope,
.fa-phone {
  color: #F2EDE6;
  padding-bottom: .15em;
  padding-top: .2em;
}
.fa-envelope {
  padding-left: 1em;
  padding-right: 1em;
}
.fa-facebook-f:hover, .fa-envelope:hover, .fa-phone:hover {
  color:#03a6a6;
}

/* Padding */
.footer-padding {
  padding-top: 1rem;
  padding-bottom:.25rem;
}

/* Logo */
.ftr-logo {
  height:12rem;
  width:auto;
  padding-right:1.75rem;
  margin-bottom:0rem;
}

/* Footer */
.ftr-header {
  color:#F2EDE6;
}
footer p {
  color:#D89288;
}

/* Horizontal Rules */
.ftr-hr, .icons-hr {
  background-color:#E2DCD1;
  opacity:25%;
}
.icons-hr {
  width:25%;
}
.ftr-hr {
  width:85%;
}
.i-hr-bottom {
  padding-bottom:0em;
  margin-bottom:.25rem;
}




/*   ##########   ##        ##  ##########  #########     ##########   ##########
    ##        ##  ##        ##      ##      ##      ##    ##          ##
    ##            ##        ##      ##      ##       ##   ##          ##
    ##            ##        ##      ##      ##        ##  #########    ##########
    ##  #######   ##        ##      ##      ##        ##  ##                    ##
    ##        ##  ##        ##      ##      ##       ##   ##                    ##
    ##        ##  ##        ##      ##      ##      ##    ##                    ##
     ##########    ##########   ##########  #########     ##########   ##########   */

.guide-card {
  width:90%;
  margin:auto;
}
.guide-name {
  font-size:2em;
  padding-bottom:0em;
  margin-bottom:.2em;
}
.guide-diff {
  padding-top:0em;
  margin-top:0em;
  margin-bottom:.5em;
}
.guide-mtls {
  font-weight:500;
  margin-top:0em;
  margin-bottom:.5em;
  font-style:italic;
}

/* Horizontal rule */
.guide-hr {
  margin-top:.3em;
}

/* Icons and difficulty */
.fa-user-check, .beginner {
  color:#2AB83E;
}
.fa-user-clock, .intermediate {
  color:#E8AD00;
}
.fa-user-lock, .advanced {
  color:#B82A2A;
}

/* Guide basics */
.guide-basics {
  margin-top:.5em;
  margin-bottom:.5em;
}




/*  ###########   ##########    ##########    ####      ####
    ##           ##        ##   ##       ##   ## ##    ## ##
    ##           ##        ##   ##        ##  ##  ##  ##  ##
    #########    ##        ##   ##       ##   ##   ####   ##
    ##           ##        ##   ##########    ##    ##    ##
    ##           ##        ##   ##      ##    ##          ##
    ##           ##        ##   ##       ##   ##          ##
    ##            ##########    ##        ##  ##          ##  */


/* CONTACT FORM */
/* Style inputs, select elements and textareas */
input[type=text],
select,
textarea {
  width: 100%;
  padding: 12px;
  border: 1px solid #ccc;
  border-radius: 4px;
  box-sizing: border-box;
  resize: vertical;
}

/* Style the label to display next to the inputs */
label {
  padding: 12px 12px 12px 0;
  display: inline-block;
}

/* Style the submit button */
input[type=submit] {
  background-color: #CC3035;
  color: rgb(255, 255, 255);
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  float: right;
  width:100%;
}

/* Style the container */
#formpage {
  border-radius: 5px;
  background-color: #E2DCD1;
  padding: 20px;
}

/* Floating column for labels: 25% width */
.formcol25 {
  float: left;
  width: 25%;
  margin-top: 6px;
  padding-left: .75rem;
}

/* Floating column for inputs: 75% width */
.formcol75 {
  float: left;
  width: 75%;
  margin-top: 6px;
  padding-right: .75rem;
}

/* Clear floats after the columns */
.formrow:after {
  content: "";
  display: table;
  clear: both;
}

/* Responsive layout - when the screen is less than 600px wide, make the two columns stack on top of each other instead of next to each other */
@media screen and (max-width: 600px) {

  .formcol25,
  .formcol75,
  input[type=submit] {
    width: 100%;
    margin-top: 0;
  }
}

